--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,6 @@
 {
   "version": 2,
   "cleanUrls": true,
+  "builds": [{ "src": "src/index.ts", "use": "@now/node" }],
   "rewrites": [{ "source": "/(.*)", "destination": "/src/index.ts" }]
 }
