fixes vercel.json to use @vercel/node instead of @now/node

--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
   "version": 2,
   "cleanUrls": true,
-  "builds": [{ "src": "src/index.ts", "use": "@now/node" }],
+  "builds": [{ "src": "src/index.ts", "use": "@vercel/node" }],
   "rewrites": [{ "source": "/(.*)", "destination": "/src/index.ts" }]
 }
