--- a/vercel.json
+++ b/vercel.json
@@ -8,10 +8,10 @@
 			"config": { "includeFiles": ["dist/**"] }
 		}
 	],
-	"routes": [
-		{
-			"src": "/(.*)",
-			"dest": "dist/index.js"
-		}
-	]
+  "redirects": [
+    {
+        "src": "/(.*)",
+        "dest": "/dist/index.js"
+    }
+]
 }
