--- a/vercel.json
+++ b/vercel.json
@@ -8,10 +8,10 @@
 			"config": { "includeFiles": ["dist/**"] }
 		}
 	],
-  "redirects": [
-    {
-        "src": "/(.*)",
-        "dest": "/dist/index.js"
-    }
-]
+	"rewrites": [
+		{
+			"source": "/(.*)",
+			"destination": "/dist/index.js"
+		}
+	]
 }
