--- a/vercel.json
+++ b/vercel.json
@@ -5,7 +5,7 @@
 		{
 			"src": "dist/index.js",
 			"use": "@vercel/node",
-			"config": { "includeFiles": ["dist/**"] }
+			"config": { "includeFiles": ["dist/**", "public/**"] }
 		}
 	],
 	"rewrites": [
