--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,17 @@
 {
-  "version": 2,
-  "cleanUrls": true,
-  "rewrites": [{ "source": "/(.*)", "destination": "/src/index.ts" }]
+	"version": 2,
+	"cleanUrls": true,
+	"builds": [
+		{
+			"src": "dist/index.js",
+			"use": "@vercel/node",
+			"config": { "includeFiles": ["dist/**", "public/**"] }
+		}
+	],
+	"rewrites": [
+		{
+			"source": "/(.*)",
+			"destination": "/dist/index.js"
+		}
+	]
 }
