--- a/package.json
+++ b/package.json
@@ -14,14 +14,16 @@
 		"dev": "pnpm run \"/dev:/\"",
 		"check": "pnpm biome check --apply ."
 	},
-	"keywords": ["hacker news", "api"],
+	"keywords": [
+		"hacker news",
+		"api"
+	],
 	"author": "Adhiraj Dutta <bytehead.dev@gmail.com>",
 	"license": "MIT",
 	"devDependencies": {
 		"@biomejs/biome": "1.7.0",
 		"@types/express": "^4.17.21",
 		"@types/node": "^20.12.7",
-		"helmet": "^7.1.0",
 		"nodemon": "^3.1.0",
 		"ts-node": "^10.9.2",
 		"typescript": "^5.4.5"
