--- a/package.json
+++ b/package.json
@@ -14,10 +14,7 @@
 		"dev": "pnpm run \"/dev:/\"",
 		"check": "pnpm biome check --apply ."
 	},
-	"keywords": [
-		"hacker news",
-		"api"
-	],
+	"keywords": ["hacker news", "api"],
 	"author": "Adhiraj Dutta <bytehead.dev@gmail.com>",
 	"license": "MIT",
 	"devDependencies": {
@@ -30,6 +27,7 @@
 	},
 	"dependencies": {
 		"cheerio": "1.0.0-rc.12",
+		"cors": "^2.8.5",
 		"express": "^4.19.2"
 	}
 }
